--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-glitch-effect": "^3.1.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.3",
+    "react-use-gesture": "^9.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
